kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securescout
  labels:
    name: securescout
    app: securescout
